module(
    name = "datasets_client",
)

bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.40.0")

##########################
## Golang Configuration ##
##########################

# Register the Go SDK installed on the host.
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_work = "//go:go.work")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_gosuri_uiprogress",
)

###########
## Other ##
###########

bazel_dep(name = "aspect_bazel_lib", version = "1.38.1")
